# ListaSpesa

./: Articolo.cpp  Articolo.h  CMakeLists.txt  Lista.cpp  Lista.h  ListaNotifier.h  Observer.h  README.md  Subject.h  Utente.cpp  Utente.h  main.cpp
test/: ArticoloTest.cpp  CMakeLists.txt  ListaTest.cpp  ObserverTest.cpp  UtenteTest.cpp  runAllTests.cpp
test/lib/googletest/: CHANGES  CMakeLists.txt  CONTRIBUTORS  Makefile.am  README.md  configure.ac
test/lib/googletest/cmake/: internal_utils.cmake
test/lib/googletest/docs/: AdvancedGuide.md  Documentation.md  FAQ.md  Pkgconfig.md  Primer.md  PumpManual.md  Samples.md  XcodeGuide.md
test/lib/googletest/include/gtest/: gtest-death-test.h  gtest-message.h  gtest-param-test.h  gtest-param-test.h.pump  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h  gtest_prod.h
test/lib/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-linked_ptr.h  gtest-param-util-generated.h  gtest-param-util-generated.h.pump  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-tuple.h.pump  (+2 more)
test/lib/googletest/m4/: acx_pthread.m4  gtest.m4
test/lib/googletest/src/: gtest-all.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc
test/lib/googletest/test/: gtest_output_test_golden_lin.txt
test/lib/googletest/xcode/Config/: General.xcconfig  StaticLibraryTarget.xcconfig
test/lib/googletest/xcode/gtest.xcodeproj/: project.pbxproj
(+2 files in other folders)
